--- a/HRM/Components/Personel/Profile/ProfileEmployee.razor
+++ b/HRM/Components/Personel/Profile/ProfileEmployee.razor
@@ -8,6 +8,7 @@
 @inject PositionService PositionService
 @inject IDialogService Dialog
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+@inject ISnackbar Snackbar
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject AuthenticationService AuthenticationService
@@ -189,7 +190,7 @@
                                            Size="Size.Large"
                                            Variant="Variant.Filled"
                                            Color="@(_isEditShift ? Color.Error: Color.Primary)">
-                                     @(_isEditShift ? "Hủy": "Sửa tan ca")
+                                    @(_isEditShift ? "Hủy": "Sửa tan ca")
                                 </MudButton>
                             </div>
                             @if (_isEditShift == true)
@@ -205,7 +206,7 @@
     </MudItem>
 </MudGrid>
 @if (_isAdmin == true || _isCurrentEmployee == true)
-{ 
+{
     <div class="container">
         <HRM.Components.Salary.PersonalSalary EmployeeId="@EmployeeId" />
     </div>
@@ -266,6 +267,7 @@
         _employee = EmployeeService.GetEmployee(EmployeeId);
         _position = PositionService.GetPosition((int)_employee.PositionId);
         _department = DepartmentService.GetDepartment((int)_employee.DepartmentId);
+        Snackbar.Add($"Chỉnh sửa lịch làm việc thành công");
     }
 
     string GetDate(string DateStr)
