--- a/HRM/Components/Personel/EmployeeGridTable.razor
+++ b/HRM/Components/Personel/EmployeeGridTable.razor
@@ -8,7 +8,7 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @attribute [Authorize(Roles = "Admin,User")]
 
-<MudTable Items="@_listEmployee" Hover="true"
+<MudTable Items="@ListEmployee" Hover="true"
           Filter="new Func<Employee,bool>(FilterFunc)">
     <ToolBarContent>
         <MudText Typo="Typo.h6">Danh sách nhân viên</MudText>
@@ -53,11 +53,11 @@
 
 @code {
     private string _searchStr = "";
-    private IEnumerable<Employee> _listEmployee;
+    [Parameter] public List<Employee> ListEmployee { set; get; }
 
     protected override void OnInitialized()
     {
-        _listEmployee = EmployeeService.GetAll();
+        
     }
 
     private bool FilterFunc(Employee employee) => Filter(employee, _searchStr);
